--- a/src/Components/Forms/styles.module.sass
+++ b/src/Components/Forms/styles.module.sass
@@ -7,12 +7,14 @@
 
 
 .Input 
-   width: 300px
+   width: 100%
    margin-bottom: 20px
 
    input 
       color: #ffffff
 
+.Alert 
+   margin-bottom: 20px
 
 .Title 
    color: #ffffff
