--- a/src/Pages/Main/styles.module.sass
+++ b/src/Pages/Main/styles.module.sass
@@ -18,6 +18,26 @@
    display: flex
    justify-content: center
    align-items: center
+   position: fixed
+   z-index: 1
+   left: 0
+   top: 0
+   width: 100%
+   height: 100%
+   overflow: auto
+   background-color: rgb(0,0,0)
+   background-color: rgba(0,0,0,0.4)
+
+
+/* Modal Content/Box */
+.Modal_content 
+  background-color: #fefefe
+  padding: 20px
+  border: 1px solid #888
+
+
+/* The Close Button */
+
 
 .FormContainer
    position: relative
